--- a/HW 1.xhtml
+++ b/HW 1.xhtml
@@ -24,6 +24,8 @@
         <li> Major: Information Systems </li>
         <li> Grade: Senior </li>
     </ul>
+    <br />
+    <a href="index.md"> Home </a>
  </body>
  </html>
  
