--- a/HW 1.xhtml
+++ b/HW 1.xhtml
@@ -25,7 +25,7 @@
         <li> Grade: Senior </li>
     </ul>
     <br />
-    <a href="index.md"> Home </a>
+    <a href="index.xhtml"> Home </a>
  </body>
  </html>
  
