--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <br />
         <ul>
             <li> <a href="HW 1.xhtml"> Exercise 2.1 </a></li>
+            <li> <a href="fibonacci.xhtml"> Exercise 4.4</a></li>
         </ul>
  </body>
  </html>
