--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -9,25 +9,26 @@
         <meta charset = "utf-8" />
     </head>
     <body>
-        <script type = "text/javascript" src = "fibonacci.js" >
+        <script type = "text/javascript">
+        //    Compute the Fibonacci number provided by the user
+
+        // Get the input number n from the user
+        var n = prompt("What is the value of 'n'? \n", "");
+        var a = 1;
+        var b = 2;
+
+        var i, c;
+        for (i=3; i<n; i++)
+        {
+            c = a + b;
+            document.write("",c, " ");
+            a = b;
+            b = c;
+        }
         </script>
     </body>
  </html>
- // fibonacci.js
- //    Compute the Fibonacci number provided by the user
+ 
 
- // Get the input number n from the user
- var n = prompt("What is the value of 'n'? \n", "");
- var a = 1;
- var b = 2;
-
- var i, c;
- for (i=3; i<n; i++)
- {
-     c = a + b;
-     document.write("",c, " ");
-     a = b;
-     b = c;
- }
 
  
