--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -9,6 +9,7 @@
         <meta charset = "utf-8" />
     </head>
     <body>
+        <h1> Fibonacci Sequence JavaScript</h1>
         <script type = "text/javascript">
         //    Compute the Fibonacci number provided by the user
 
