--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -18,6 +18,8 @@
         var a = 1;
         var b = 2;
 
+        document.write("The fibonacci sequence :", a, b, " ")
+
         var i, c;
         for (i=3; i<n; i++)
         {
