--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -16,17 +16,16 @@
         // Get the input number n from the user
         var n = prompt("What is the value of 'n'? \n", "");
         var a = 1;
-        var b = 2;
+        var b = 1;
+        var c;
+        document.write("The fibonacci series is : ", a, b, " ")
 
-        document.write("The fibonacci sequence :", a, b, " ")
-
-        var i, c;
-        for (i=3; i<n; i++)
-        {
-            c = a + b;
-            document.write("",c, " ");
+        for (var i=2; i<n; i++)
+        {   
+            var c = a + b;
             a = b;
             b = c;
+            document.write("",c," ");
         }
         </script>
         <a href="index.html"> Home </a>
