--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -21,7 +21,8 @@
 
         document.write("The fibonacci series is : ", a, b, " ")
 
-        for (var i=2; i<n; i++)
+        var i;
+        for (i=2; i<n; i++)
         {   
             var c = a + b;
             a = b;
