--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -1,7 +1,6 @@
 <?xml version = "1.0" encoding = "utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml1-strict.dtd">
 <!-- fibonacci.html 
-     A document for fibonacci.js
     -->
  <html xmlns = "http://www.w3.org/1999/xhtml">
     <head>
@@ -21,8 +20,7 @@
 
         document.write("The fibonacci series is : ", a, b, " ")
 
-        var i;
-        for (i=2; i<n; i++)
+        for (var i = 2; i < n; i++)
         {   
             var c = a + b;
             a = b;
