--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -17,7 +17,9 @@
         var b = 1;
         var c;
 
-        document.write("The fibonacci series is : ", a, b, " ")
+        document.write("The fibonacci series is : ")
+        document.write("",a," ");
+        document.write("",b," ");
 
         for (var i = 2; i < n; i++)
         {   
