--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -16,7 +16,8 @@
         var b = 1;
         var c;
 
-        document.write("The fibonacci series is : ");
+        document.write("The fibonacci series is : ", "<br/>");
+        
         document.write("",a," ");
         document.write("",b," ");
         //<![CDATA[
