--- a/fibonacci.xhtml
+++ b/fibonacci.xhtml
@@ -11,13 +11,13 @@
         <script type = "text/javascript">
         //  Compute the Fibonacci number provided by the user
         // Get the input number n from the user
-        var n = prompt("What is the value of 'n':", " ");
+        var n = prompt("What is the value of 'n'? \n", "");
         var a = 1;
         var b = 1;
         var c;
 
         document.write("The fibonacci series is : ", "<br/>");
-        
+
         document.write("",a," ");
         document.write("",b," ");
         //<![CDATA[
