--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -1,1 +1,43 @@
-
+<?xml version = "1.0" encoding = "utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml1-strict.dtd">
+<!-- main.xhtml
+     Home web page of PC World
+     -->
+ <html lang = "en" xmlns = "http://www.w3.org/1999/xhtml">
+    <head>
+        <title> Main </title>
+        <meta charset = "utf-8" /> 
+        <style type = "text/css">
+            p.major {font-size: 1.1em;
+                      font-weight: bold;
+                      font-family:'Arial';
+                    }
+            p.minor {font: 0.9em 'Arial';}
+            h1 {font-family: 'Arial';
+                font-size: 2em; font-weight: bold;}
+            h2 {font-family: 'Arial'; font-size: 1.5em;}
+            img {float: right;}
+        </style>
+    </head>
+    <body>
+        <h1> PC World </h1>
+        <hr />
+        <h2> Inside of a computer </h2>
+        <p>
+            <img src = "Computer.jpg" alt = "Picture of inside of a gaming computer" />
+        </p>
+        <p class = "minor">
+            Computers are complicated devices that is used by everyone around the world. The inside of a computer is what makes it 
+            a powerful device that is able to do what it needs to do. Each part of a computer has its purpose and is carefully put 
+            together to form what we call a computer today. Many enthusist around the world build their own personal computer through
+            buying the parts and putting it together themselves or with the help of third party sellers who build it for them. While
+            this may seem daunting to the average person, building your own computer is not that difficult. 
+        </p>
+        <p class = "minor">   
+            Here in PC World we will go over the general steps taken to build your own computer and what to look for when choosing the 
+            components of your computer. We've divided up the components into seperate categories: The case, motherboard, graphical 
+            processing unit (GPU), central processing unit (CPU), memory, storage, and power supply. 
+        </p>
+    </body>
+ </html>
+ 
