--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <ul>
             <li> <a href="HW 1.xhtml"> Exercise 2.1 </a></li>
             <li> <a href="fibonacci.html"> Exercise 4.4</a></li>
+            <li> <a href="Main.xhtml"> Individual Project</a></li>
         </ul>
-
     <hr />
  </body>
  </html>
