--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li> <a href="HW 1.xhtml"> Exercise 2.1 </a></li>
             <li> <a href="fibonacci.html"> Exercise 4.4</a></li>
-            <li> <a href="Main.xhtml"> Individual Project</a></li>
+            <li> <a href="Project/Main.xhtml"> Individual Project</a></li>
         </ul>
     <hr />
  </body>
