--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -13,6 +13,7 @@
                       font-family:'Arial';
                     }
             p.minor {font: 0.9em 'Arial';}
+            p { margin: 50px;}
             h1 {font-family: 'Arial';
                 font-size: 2em; font-weight: bold;}
             h2 {font-family: 'Arial'; font-size: 1.5em;}
