--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -17,14 +17,14 @@
             h1 {font-family: 'Arial';
                 font-size: 2em; font-weight: bold;}
             h2 {font-family: 'Arial'; font-size: 1.5em;}
-            img {float: right;}
         </style>
     </head>
     <body>
         <h1> PC World </h1>
         <hr />
         <h2> Inside of a computer </h2>
-        <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+        <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" 
+             style = "float:left" />
         <p class = "minor">
             Computers are complicated devices that is used by everyone around the world. The inside of a computer is what makes it 
             a powerful device that is able to do what it needs to do. Each part of a computer has its purpose and is carefully put 
