--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -15,7 +15,7 @@
             p.minor {font: 0.9em 'Arial';}
             p.aligncenter { text-align: center;}
             h1 {font-family: 'Arial';
-                font-size: 2em; font-weight: bold;}
+                font-size: 2em; font-weight: bold; text-align: center;} 
             h2 {font-family: 'Arial'; font-size: 1.5em;}
         </style>
     </head>
