--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -8,15 +8,21 @@
         <title> Main </title>
         <meta charset = "utf-8" /> 
         <style type = "text/css">
-            p.major {font-size: 1.1em;
+            p.major { font-size: 1.1em;
                       font-weight: bold;
                       font-family:'Arial';
                     }
-            p.minor {font: 0.9em 'Arial';}
+            p.minor { font: 0.9em 'Arial';}
             p.aligncenter { text-align: center;}
-            h1 {font-family: 'Arial';
-                font-size: 2em; font-weight: bold; text-align: center;} 
-            h2 {font-family: 'Arial'; font-size: 1.5em;}
+            h1 { font-family: 'Arial';
+                 font-size: 2em; font-weight: bold; text-align: center;} 
+            h2 { font-family: 'Arial'; font-size: 1.5em; text-align: center;}
+            ul { list-style-type: none;
+                 margin:0;
+                 padding: 0;
+                 width: 60px;
+               }
+            li a { display: block; background-color: aquamarine;}
         </style>
     </head>
     <body>
@@ -26,6 +32,16 @@
         <p class = "aligncenter">
             <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
         </p>
+        <ul>
+            <li><a href = "">Home</a></li>
+            <li><a href = "">Cases</a></li>
+            <li><a href = "">Motherboard</a></li>
+            <li><a href = "">GPU</a></li>
+            <li><a href = "">CPU</a></li>
+            <li><a href = "">Memory</a></li>
+            <li><a href = "">Storage</a></li>
+            <li><a href = "">Power Supply</a></li>
+        </ul>
         <p class = "minor">
             Computers are complicated devices that is used by everyone around the world. The inside of a computer is what makes it 
             a powerful device that is able to do what it needs to do. Each part of a computer has its purpose and is carefully put 
