--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -21,8 +21,13 @@
                  margin:0;
                  padding: 0;
                  width: 60px;
+                 background-color: gray;
                }
-            li a { display: block; background-color: aquamarine;}
+            li a { display: block; 
+                   color: black;
+                   padding: 8px 16px;
+                   text-decoration: none;
+                 }
         </style>
     </head>
     <body>
