--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -15,50 +15,57 @@
             p.minor { font: 0.9em 'Arial';}
             p.aligncenter { text-align: center;}
             h1 { font-family: 'Arial';
-                 font-size: 2em; font-weight: bold; text-align: center;} 
+                 font-size: 5em; font-weight: bold; text-align: center;} 
             h2 { font-family: 'Arial'; font-size: 1.5em; text-align: center;}
             ul { list-style-type: none;
                  margin:0;
                  padding: 0;
-                 width: 60px;
-                 background-color: gray;
+                 width: 10%;
+                 height: 100%;
+                 position: fixed;
+                 overflow: auto;
+                 font-family: 'Arial';
+                 background-color: #90bade;
                }
             li a { display: block; 
-                   color: black;
                    padding: 8px 16px;
+                   color: #333;
                    text-decoration: none;
                  }
         </style>
     </head>
     <body>
-        <h1> PC World </h1>
-        <hr />
-        <h2> Inside of a computer </h2>
-        <p class = "aligncenter">
-            <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
-        </p>
-        <ul>
-            <li><a href = "">Home</a></li>
-            <li><a href = "">Cases</a></li>
-            <li><a href = "">Motherboard</a></li>
-            <li><a href = "">GPU</a></li>
-            <li><a href = "">CPU</a></li>
-            <li><a href = "">Memory</a></li>
-            <li><a href = "">Storage</a></li>
-            <li><a href = "">Power Supply</a></li>
-        </ul>
-        <p class = "minor">
-            Computers are complicated devices that is used by everyone around the world. The inside of a computer is what makes it 
-            a powerful device that is able to do what it needs to do. Each part of a computer has its purpose and is carefully put 
-            together to form what we call a computer today. Many enthusist around the world build their own personal computer through
-            buying the parts and putting it together themselves or with the help of third party sellers who build it for them. While
-            this may seem daunting to the average person, building your own computer is not that difficult. 
-        </p>
-        <p class = "minor">   
-            Here in PC World we will go over the general steps taken to build your own computer and what to look for when choosing the 
-            components of your computer. We've divided up the components into seperate categories: The case, motherboard, graphical 
-            processing unit (GPU), central processing unit (CPU), memory, storage, and power supply. 
-        </p>
+        <div>
+            <ul>
+                <li><a href = "">Home</a></li>
+                <li><a href = "">Cases</a></li>
+                <li><a href = "">Motherboard</a></li>
+                <li><a href = "">GPU</a></li>
+                <li><a href = "">CPU</a></li>
+                <li><a href = "">Memory</a></li>
+                <li><a href = "">Storage</a></li>
+                <li><a href = "">Power Supply</a></li>
+            </ul>
+        </div>
+        <div style="margin-left: 10%; padding: 1px 16px; height 1000px;">
+            <h1> PC World </h1>
+            <h2> Inside of a computer </h2>
+            <p class = "aligncenter">
+                <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+            </p>
+            <p class = "minor">
+                Computers are complicated devices that is used by everyone around the world. The inside of a computer is what makes it 
+                a powerful device that is able to do what it needs to do. Each part of a computer has its purpose and is carefully put 
+                together to form what we call a computer today. Many enthusist around the world build their own personal computer through
+                buying the parts and putting it together themselves or with the help of third party sellers who build it for them. While
+                this may seem daunting to the average person, building your own computer is not that difficult. 
+            </p>
+            <p class = "minor">   
+                Here in PC World we will go over the general steps taken to build your own computer and what to look for when choosing the 
+                components of your computer. We've divided up the components into seperate categories: The case, motherboard, graphical 
+                processing unit (GPU), central processing unit (CPU), memory, storage, and power supply. 
+            </p>
+        </div>  
     </body>
  </html>
  
