--- a/Project/cases.xhtml
+++ b/Project/cases.xhtml
@@ -1,11 +1,11 @@
 <?xml version = "1.0" encoding = "utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml1-strict.dtd">
-<!-- main.xhtml
+<!-- cases.xhtml
      Home web page of PC World
      -->
  <html lang = "en" xmlns = "http://www.w3.org/1999/xhtml">
     <head>
-        <title> Main </title>
+        <title> cases </title>
         <meta charset = "utf-8" /> 
         <style type = "text/css">
             body {background-color: #82a1d1;}
@@ -18,6 +18,7 @@
             h1 { font-family: 'Arial';
                  font-size: 4em; font-weight: bold; text-align: center;} 
             h2 { font-family: 'Arial'; font-size: 2.5em; text-align: center;}
+            h3 { font-family: 'Arial'; font-size: 1.5em; text-align: center;}
             ul { list-style-type: none;
                  margin:0;
                  padding: 0;
@@ -52,22 +53,41 @@
         <div style= "margin-left: 10%; padding: 1px 16px;">
             <h1> PC World </h1>
             <hr />
-            <h2> Inside of a computer </h2>
-            <p class = "aligncenter">
-                <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
-            </p>
+            <h2> Cases </h2>
             <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
-                Computers are complicated devices that is used by everyone around the world. The inside of a computer is what makes it 
-                a powerful device that is able to do what it needs to do. Each part of a computer has its purpose and is carefully put 
-                together to form what we call a computer today. Many enthusist around the world build their own personal computer through
-                buying the parts and putting it together themselves or with the help of third party sellers who build it for them. While
-                this may seem daunting to the average person, building your own computer is not that difficult. 
+                The first thing you will need to build a computer is the case in which all your other parts are going to be in. 
+                There is a variety of sizes and styles of cases one can choose from. One of the biggest consideration when choosing
+                between the different sizes of cases is the number of slots and number of devices one would like to have. But the 
+                most important factor is the compatiblity of a case with motherboard size.
             </p>
-            <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">   
-                Here in PC World we will go over the general steps taken to build your own computer and what to look for when choosing the 
-                components of your computer. We've divided up the components into seperate categories: The case, motherboard, graphical 
-                processing unit (GPU), central processing unit (CPU), memory, storage, and power supply. 
-            </p>
+
+            <h3> Sizes </h3>
+            <ol style = "margin-left: 100px; margin-right: 100px;">
+                <li> Full Tower 
+                    <ol>
+                        <li> The biggest of the cases where you can install big GPU like the new nVidia GeForce 
+                             RTX 3090. With the amoung of space you can use a water-cooling solution for you 
+                             cooling needs for your system.
+                        </li>
+                    </ol>
+                </li>
+                <li> Mid Tower 
+                    <ol>
+                        <li> A step down from the full tower case, the mid-tower case are the most widely
+                             used computer cases. Mid-towers can contain 2 to 4 internal drive bays and external 
+                             drive bays. This case can support an all in one (AIO) cooling setup for the PC.
+                        </li>
+                    </ol>
+                </li>
+                <li> Micro PC Tower
+                    <ol>
+                        <li> These are the smaller than the mid-tower case where only 2 to 3 internal drive bays 
+                             are supported. These cases usually have a problem later in the future due to 
+                             expandability issues.
+                        </li>
+                    </ol>
+                </li>
+            </ol>
         </div>  
     </body>
  </html>
