--- a/Project/cases.xhtml
+++ b/Project/cases.xhtml
@@ -61,6 +61,10 @@
                 most important factor is the compatiblity of a case with motherboard size.
             </p>
 
+            <p class = "aligncenter">
+                <img src = "Resources/cases.png" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+            </p>
+
             <h3> Sizes </h3>
             <ol style = "margin-left: 100px; margin-right: 100px;">
                 <li> Full Tower 
