--- a/Project/cases.xhtml
+++ b/Project/cases.xhtml
@@ -62,7 +62,7 @@
             </p>
 
             <p class = "aligncenter">
-                <img src = "Resources/cases.png" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+                <img src = "Resources/cases.png" height = "334" width = "500" alt = "Sizes of cases" />
             </p>
 
             <h3> Sizes </h3>
