--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -18,6 +18,7 @@
             h1 { font-family: 'Arial';
                  font-size: 4em; font-weight: bold; text-align: center;} 
             h2 { font-family: 'Arial'; font-size: 2.5em; text-align: center;}
+            h3 { font-family: 'Arial'; font-size: 1.5em; text-align: center;}
             ul { list-style-type: none;
                  margin:0;
                  padding: 0;
