--- a/Project/gpu.xhtml
+++ b/Project/gpu.xhtml
@@ -53,17 +53,23 @@
         <div style= "margin-left: 10%; padding: 1px 16px;">
             <h1> PC World </h1>
             <hr />
-            <h2> Graphical Processing Unit (GPU) </h2>
+            <h2> Graphical Processing Unit </h2>
             <p class = "aligncenter">
-                <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+                <img src = "Resources/GPU.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+            </p>
+            <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
+                The graphics processing unit (GPU) of a computer often refered to as a graphics card or video card. Every computer
+                uses a GPU to render images, video and 2D or 3D animations for display. The GPU performs calculations and frees up 
+                the CPU to do its tasks. There are two types of GPUs: integrated or discrete. Right now the two most popular 
+                manufacturer for GPUs are AMD and nVidia where each has there own ranges of performances and software.
             </p>
             <h3> AMD </h3>
-            <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
-                Info
+            <p class = "aligncenter">
+                <img src = "Resources/amd.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
             </p>
             <h3> nVidia </h3>
-            <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">   
-                Info
+            <p class = "aligncenter">
+                <img src = "Resources/nvidia.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
             </p>
         </div>  
     </body>
