--- a/Project/motherboard.xhtml
+++ b/Project/motherboard.xhtml
@@ -1,11 +1,11 @@
 <?xml version = "1.0" encoding = "utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml1-strict.dtd">
-<!-- momtherboard.xhtml
+<!-- motherboard.xhtml
      web page for information on motherboards
      -->
  <html lang = "en" xmlns = "http://www.w3.org/1999/xhtml">
     <head>
-        <title> gpu </title>
+        <title> motherboard </title>
         <meta charset = "utf-8" /> 
         <style type = "text/css">
             body {background-color: #82a1d1;}
@@ -55,15 +55,26 @@
             <hr />
             <h2> Motherboard </h2>
             <p class = "aligncenter">
-                <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+                <img src = "Resources/motherboard.jpg" height = "334" width = "General information on a motherboard" />
             </p>
-            <h3> AMD </h3>
             <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
-                Info
+                The motherboard is a printed circut board and the base and foundation of a computer. Motherboards in a computer holds are the components of a system such as the GPU, CPU memory, and also
+                the connections for all the peripherals. The motherboard allocates all the power to the system and allows communication between the all the componnents of a system.
+                There are a variety of types of motherboards which are designed to fit different types and sizes of computers. Each of these are designed to work with a specific type of processeros and memmory
+                There is no set standard on the many conenctions, ports, or expansion slots are on a motherboard. When choosing a motherboard one must look at the design specifications to determine the number of 
+                avaliable connections a motherboard allows.
             </p>
-            <h3> nVidia </h3>
-            <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">   
-                Info
+            <h3> Form Factor </h3>
+            <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
+                Motherboards have a variety of form factors which each having differing amount of connections. Most modern motherboards come in three sizes.
+                <ul>
+                    <li>ATX</li>
+                    <li>Micro-ATX</li>
+                    <li>Mini-ITX</li>
+                </ul>
+            </p>
+            <p class = "aligncenter">
+                <img src = "Resources/form.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
             </p>
         </div>  
     </body>
