--- a/Project/storage.xhtml
+++ b/Project/storage.xhtml
@@ -19,35 +19,51 @@
                  font-size: 4em; font-weight: bold; text-align: center;} 
             h2 { font-family: 'Arial'; font-size: 2.5em; text-align: center;}
             h3 { font-family: 'Arial'; font-size: 1.5em; text-align: center;}
-            ul { list-style-type: none;
-                 margin:0;
-                 padding: 0;
-                 width: 10%;
-                 height: 100%;
-                 position: fixed;
-                 overflow: auto;
-                 font-family: 'Arial';
-                 background-color: #9fbeed;
-               }
-            li a { display: block; 
+            ul.a { list-style-type: none;
+                   margin:0;
+                   padding: 0;
+                   width: 10%;
+                   height: 100%;
+                   position: fixed;
+                   overflow: auto;
+                   font-family: 'Arial';
+                   background-color: #9fbeed;
+                 }
+            li.b { display: block; 
                    padding: 8px 16px;
                    color: #333;
                    text-decoration: none;
                  }
             img { border: 1px solid #333;}
+            .container { display: flex;
+                         flex-direction: row;
+                         justify-content: space-evenly;
+                       }
+            .photos { display: flex;
+                      justify-content: center;
+                      flex-direction: column;
+                      align-items: center;
+                    }
+            .image { display: block;
+                     width: 75%;
+                   }
+            .word { display: block;
+                    width: 100%;
+                    text-align: center;
+                  }
         </style>
     </head>
     <body>
         <div>
-            <ul>
-                <li><a href = "Main.xhtml">Home</a></li>
-                <li><a href = "cases.xhtml">Cases</a></li>
-                <li><a href = "motherboard.xhtml">Motherboard</a></li>
-                <li><a href = "gpu.xhtml">GPU</a></li>
-                <li><a href = "cpu.xhtml">CPU</a></li>
-                <li><a href = "memory.xhtml">Memory</a></li>
-                <li><a href = "storage.xhtml">Storage</a></li>
-                <li><a href = "power.xhtml">Power Supply</a></li>
+            <ul class = "a">
+                <li class = "b"><a href = "Main.xhtml">Home</a></li>
+                <li class = "b"><a href = "cases.xhtml">Cases</a></li>
+                <li class = "b"><a href = "motherboard.xhtml">Motherboard</a></li>
+                <li class = "b"><a href = "gpu.xhtml">GPU</a></li>
+                <li class = "b"><a href = "cpu.xhtml">CPU</a></li>
+                <li class = "b"><a href = "memory.xhtml">Memory</a></li>
+                <li class = "b"><a href = "storage.xhtml">Storage</a></li>
+                <li class = "b"><a href = "power.xhtml">Power Supply</a></li>
             </ul>
         </div>
         <div style= "margin-left: 10%; padding: 1px 16px;">
@@ -55,16 +71,32 @@
             <hr />
             <h2> Storage </h2>
             <p class = "aligncenter">
-                <img src = "Resources/Computer.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+                <img src = "Resources/storage.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
             </p>
-            <h3> SSD </h3>
             <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
-                Info
+                Storage in a computer allows digital data to be saved. Storage devices such as flash devices and
+                hard disks are a fundamental component of a computer which allow the user to save all kinds of 
+                information such as video, documents, images, etc. Storage comes in two different types of  
+                technology: hard disk drive (HDD) and solid state drive (SSD). SSDs can be further borken down 
+                into three types: PCI Express (PCIe), Nonvolatile Memory Express standard (NVMe), and Serial Advanced
+                Technology Attachment (SATA). Each of these drive technology has there performances ranked in performance
+                of read and write speeds.
             </p>
-            <h3> HDD </h3>
-            <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">   
-                Info
-            </p>
+            <h3> Storage types </h3>
+            <div class = "container">
+                <div class = "photos">
+                    <img class = "image" src = "Resources/hdd.jpeg"  alt = "Picture of an AMD GPU" />
+                    <span class = "word">HDD</span>
+                </div>
+                <div class = "photos">
+                    <img class = "image" src = "Resources/ssd.jpeg"  alt = "Picture of a nVidia GPU" />
+                    <span class = "word">SATA SSD</span>
+                </div>
+                <div class = "photos">
+                    <img class = "image" src = "Resources/nvme.jpg"  alt = "Picture of a nVidia GPU" />
+                    <span class = "word">NVMe SSD</span>
+                </div>
+            </div>
         </div>  
     </body>
  </html>
