--- a/Project/Main.xhtml
+++ b/Project/Main.xhtml
@@ -48,6 +48,7 @@
                 <li class = "b"><a href = "memory.xhtml">Memory</a></li>
                 <li class = "b"><a href = "storage.xhtml">Storage</a></li>
                 <li class = "b"><a href = "power.xhtml">Power Supply</a></li>
+                <li class = "b"><a href = "about.xhtml">About</a></li>
             </ul>
         </div>
         <div style= "margin-left: 10%; padding: 1px 16px;">
