--- a/Project/about.xhtml
+++ b/Project/about.xhtml
@@ -1,7 +1,7 @@
 <?xml version = "1.0" encoding = "utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml1-strict.dtd">
-<!-- memory.xhtml
-     web page for information on memory
+<!-- about.xhtml
+     web page for information on what is this website
      -->
  <html lang = "en" xmlns = "http://www.w3.org/1999/xhtml">
      <head>
@@ -54,16 +54,14 @@
         <div style= "margin-left: 10%; padding: 1px 16px;">
             <h1> PC World </h1>
             <hr />
-            <h2> Memory </h2>
+            <h2> About </h2>
             <p class = "aligncenter">
-                <img src = "Resources/ram.jpg" height = "360" width = "640" alt = "Picture of RAM" />
+                <img src = "Resources/umbc.png" height = "236" width = "1000" alt = "Picture of a power supply" />
             </p>
             <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
-                Random-access memory, or RAM, is a important component in all computers. Without RAM a computer system
-                would be slow in processing anything. Not having enough RAM can also slow down applications or games you
-                are trying to run or even prevent them from running. RAM is a high-speed component that temporarily stores
-                all the information a computer needs both at the moment and imminently. Modern RAM for computers comes in 
-                the form for dynamic random access memory (DRAM). The most common type of RAM today is DDR4.
+                This web page is part of an individual project for an information system course in University of
+                Maryland Baltimore County. This website uses general knowledge of XHTML and the concepts learned 
+                in the course to make a simple website. 
             </p>
         </div>  
     </body>
