--- a/Project/cpu.xhtml
+++ b/Project/cpu.xhtml
@@ -3,7 +3,7 @@
 <!-- cpu.xhtml
      web page for cpu
      -->
- <html lang = "en" xmlns = "http://www.w3.org/1999/xhtml">
+<html lang = "en" xmlns = "http://www.w3.org/1999/xhtml">
     <head>
         <title> gpu </title>
         <meta charset = "utf-8" /> 
@@ -35,7 +35,6 @@
                    text-decoration: none;
                  }
             img { border: 1px solid #333;}
-            img { border: 1px solid #333;}
             .container { display: flex;
                          flex-direction: row;
                          justify-content: space-evenly;
@@ -65,6 +64,7 @@
                 <li class = "b"><a href = "memory.xhtml">Memory</a></li>
                 <li class = "b"><a href = "storage.xhtml">Storage</a></li>
                 <li class = "b"><a href = "power.xhtml">Power Supply</a></li>
+                <li class = "b"><a href = "about.xhtml">About</a></li>
             </ul>
         </div>
         <div style= "margin-left: 10%; padding: 1px 16px;">
@@ -85,11 +85,11 @@
             <h3> Brands </h3>
             <div class = "container">
                 <div class = "photos">
-                    <img class = "image" src = "Resources/amd cpu.jpg"  alt = "Picture of an AMD GPU" />
+                    <img class = "image" src = "Resources/amd cpu.jpg"  alt = "Picture of an AMD CPU" />
                     <span class = "word">AMD</span>
                 </div>
                 <div class = "photos">
-                    <img class = "image" src = "Resources/intel cpu.jpg"  alt = "Picture of a nVidia GPU" />
+                    <img class = "image" src = "Resources/intel cpu.jpg"  alt = "Picture of a Intel CPU" />
                     <span class = "word">Intel</span>
                 </div>
             </div>
