--- a/Project/storage.xhtml
+++ b/Project/storage.xhtml
@@ -64,6 +64,7 @@
                 <li class = "b"><a href = "memory.xhtml">Memory</a></li>
                 <li class = "b"><a href = "storage.xhtml">Storage</a></li>
                 <li class = "b"><a href = "power.xhtml">Power Supply</a></li>
+                <li class = "b"><a href = "about.xhtml">About</a></li>
             </ul>
         </div>
         <div style= "margin-left: 10%; padding: 1px 16px;">
@@ -71,7 +72,7 @@
             <hr />
             <h2> Storage </h2>
             <p class = "aligncenter">
-                <img src = "Resources/storage.jpg" height = "334" width = "500" alt = "Picture of inside of a gaming computer" />
+                <img src = "Resources/storage.jpg" height = "400" width = "700" alt = "Picture of storage" />
             </p>
             <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
                 Storage in a computer allows digital data to be saved. Storage devices such as flash devices and
@@ -85,15 +86,15 @@
             <h3> Storage types </h3>
             <div class = "container">
                 <div class = "photos">
-                    <img class = "image" src = "Resources/hdd.jpeg"  alt = "Picture of an AMD GPU" />
+                    <img class = "image" src = "Resources/hdd.jpeg"  alt = "Picture of an hard disk drive" />
                     <span class = "word">HDD</span>
                 </div>
                 <div class = "photos">
-                    <img class = "image" src = "Resources/ssd.jpeg"  alt = "Picture of a nVidia GPU" />
+                    <img class = "image" src = "Resources/ssd.jpeg"  alt = "Picture of a solid state drive" />
                     <span class = "word">SATA SSD</span>
                 </div>
                 <div class = "photos">
-                    <img class = "image" src = "Resources/nvme.jpg"  alt = "Picture of a nVidia GPU" />
+                    <img class = "image" src = "Resources/nvme.jpg"  alt = "Picture of a nonvolatile memory express standard drive" />
                     <span class = "word">NVMe SSD</span>
                 </div>
             </div>
