--- a/Project/power.xhtml
+++ b/Project/power.xhtml
@@ -1,7 +1,7 @@
 <?xml version = "1.0" encoding = "utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml1-strict.dtd">
-<!-- memory.xhtml
-     web page for information on memory
+<!-- power.xhtml
+     web page for information on power supply
      -->
  <html lang = "en" xmlns = "http://www.w3.org/1999/xhtml">
      <head>
@@ -54,16 +54,17 @@
         <div style= "margin-left: 10%; padding: 1px 16px;">
             <h1> PC World </h1>
             <hr />
-            <h2> Memory </h2>
+            <h2> Power Supply </h2>
             <p class = "aligncenter">
-                <img src = "Resources/ram.jpg" height = "360" width = "640" alt = "Picture of RAM" />
+                <img src = "Resources/psu.png" height = "360" width = "640" alt = "Picture of a power supply" />
             </p>
             <p class = "minor" style = "margin-left: 100px; margin-right: 100px;">
-                Random-access memory, or RAM, is a important component in all computers. Without RAM a computer system
-                would be slow in processing anything. Not having enough RAM can also slow down applications or games you
-                are trying to run or even prevent them from running. RAM is a high-speed component that temporarily stores
-                all the information a computer needs both at the moment and imminently. Modern RAM for computers comes in 
-                the form for dynamic random access memory (DRAM). The most common type of RAM today is DDR4.
+                A power supply unit (PSU) in a computer converts main AC to low-voltage regulated DC power for all
+                the internal components of a computer. Modern computers universally use switch-mode power supplies.  
+                When building a computer one must check if the power supply is enough for all the components of the
+                computer. If there is insufficient power your computer may shutdown, so you have to check carefully.
+                The most power usage of the computer is usually the graphics card, it is all ways a good idea to geat 
+                more wattage than a computer is required so this does not occur.
             </p>
         </div>  
     </body>
