--- a/Project/power.xhtml
+++ b/Project/power.xhtml
@@ -5,7 +5,7 @@
      -->
  <html lang = "en" xmlns = "http://www.w3.org/1999/xhtml">
      <head>
-         <title> motherboard </title>
+         <title> power </title>
          <meta charset = "utf-8" /> 
          <style type = "text/css">
              body {background-color: #82a1d1;}
